// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes value 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="big-spacer-bottom markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "property.foo.description",
        }
      }
    />
    <div
      className="modal-field"
    >
      <input
        autoFocus={true}
        className="input-super-large"
        onChange={[Function]}
        required={true}
        type="text"
        value="release-.*"
      />
      <div
        className="modal-field-description"
      >
        settings._default
      </div>
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <SubmitButton
      disabled={true}
    >
      save
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</form>
`;

exports[`resets value 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="big-spacer-bottom markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "property.foo.description",
        }
      }
    />
    <div
      className="modal-field"
    >
      <input
        autoFocus={true}
        className="input-super-large"
        onChange={[Function]}
        required={true}
        type="text"
        value="release-.*"
      />
      <div
        className="modal-field-description"
      >
        settings.default_x.branch-.*
      </div>
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <Button
      className="pull-left"
      disabled={false}
      onClick={[Function]}
      type="reset"
    >
      reset_to_default
    </Button>
    <SubmitButton
      disabled={true}
    >
      save
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</form>
`;
